IDEA-CR-13549 StreamApiMigrationInspection: ExpressionUtils.isZero used; better ref comparison; expression.getResolveScope()